3-Kubernetes-networking-for-vm/2-route-ingress-nodeport/networkpolicy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-openshift-ingress
spec:
  ingress:
  - from:
    - namespaceSelector:
       matchLabels:
         network.openshift.io/policy-group: ingress
  podSelector: {}
